--- a/index.html
+++ b/index.html
@@ -11,9 +11,27 @@
   <div class="grid-container">
    <div class="card">
 
-    <div class="card-contain"> Texto</div>
+    <div class="card-contain card-text" >
+    <h1>Get <span>insights</span> that help your business grow.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vero fugit et illo iusto exercitationem odit, ducimus eos quibusdam voluptatum.</p>
+    <div class="Tex-boot">
+        <div>
+            <h3 class="marg">10k+</h3>
+            <p class="marg">COMPANIES</p>
+        </div>
+        <div>
+            <h3 class="marg">314</h3>
+            <p class="marg">TEMPLATES</p>
+        </div>
+        <div>
+            <h3 class="marg">12M+</h3>
+            <p class="marg">QUERIES</p>
+        </div>
+    </div>
+    </div>
+
     <div id="img-container" class="card-contain">
-        <img id="pic" src="img/pexels-fauxels-3184357.jpg" alt="Oficina">
+        <img id="pic" src="img/pexels-fauxels-3184357.jpg" alt="Oficina" >
     </div>
    
    </div>
